<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_availability_notification_title">Install/Update/Enable Google Play services</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_ulr_inactive_age_under_13">AgeUnder13</string>
    <string name="location_client_ulr_inactive_age_unknown">AgeUnknown</string>
    <string name="location_client_ulr_inactive_unknown_restriction">UnknownRestriction</string>
    <string name="btn_done">done</string>
    <string name="btn_mode_number">123</string>
    <string name="content_description_btn_mode_number">Switch to number mode</string>
    <string name="btn_mode_alphabet">abc</string>
    <string name="content_description_btn_mode_alphabet">Switch to alphabet mode</string>
    <string name="content_description_backspace">Backspace</string>
    <string name="content_description_question_mark">Question mark</string>
    <string name="content_description_exclamation_mark">Exclamation mark</string>
    <string name="content_description_period">Period</string>
    <string name="content_description_comma">Comma</string>
    <string name="content_description_colon">Colon</string>
    <string name="content_description_space">Space</string>
    <string name="header_text">This is a header</string>
    <string name="large_text">This is large text</string>
    <string name="medium_text">This is medium text</string>
    <string name="date_separator">/</string>
    <string name="time_separator">:</string>
    <string name="app_name">Gallery</string>
    <string name="table_screensaver_name">Photo Table</string>
    <string name="flipper_screensaver_name">Photo Frame</string>
    <string name="posts_album_name">Photos from Posts</string>
    <string name="uploads_album_name">Instant Uploads</string>
    <string name="unknown_album_name">Unnamed Album</string>
    <string name="stock_photo_album_name">Stock Photos</string>
    <string name="local_source_name">Photos on Device</string>
    <string name="need_to_configure">No photos selected.</string>
    <string name="photodream_select_all">Select All</string>
    <string name="photodream_select_none">Deselect All</string>
    <string name="no_photos">No photos on the device.</string>
    <string name="label_options">Settings</string>
    <string name="label_save">Save</string>
    <string name="label_test_stitch">Stitch Panorama</string>
    <string name="message_stitching">Please Wait</string>
    <string name="options_dialog_title">Settings</string>
    <string name="stitching_finished">Panorama stitching is complete.</string>
    <string name="stitching_notification">Stitching panorama.</string>
    <string name="currently_stitching">A panorama is already being stitched.</string>
    <string name="start_stitching">Stitching is in progress. You will be notified when it is complete.</string>
    <string name="stitch_background_option">Background stitching</string>
    <string name="panorama_options_text">Panorama options</string>
    <string name="cancel_button_text">"  Cancel  "</string>
    <string name="stitch_button_text">"  Stitch  "</string>
    <string name="stitching_note">" Note : stitching in the background may be slower but will free your device for other tasks. "</string>
    <string name="unable_to_load_photo">Sorry, this photo could not be loaded.</string>
    <string name="photo_is_not_a_pano">Sorry, this photo is not a usable panorama.</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="show_on_startup">Show this on start-up</string>
    <string name="confidential">CONFIDENTIAL</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="gallery">Gallery</string>
    <string name="downloading_panorama">Downloading panorama …</string>
    <string name="expanding_short_url">Expanding shortened URL …</string>
    <string name="cannot_display_pano">Cannot display panorama</string>
    <string name="cannot_create_image">Cannot create image</string>
    <string name="image_doesnt_contain_metadata">The image file does not contain the required panorama metadata.</string>
    <string name="dogfood_settings">Dogfood settings</string>
    <string name="use_fast_shutter">Use fast shutter</string>
    <string name="use_fast_shutter_description">Use high speed shutter mode.</string>
    <string name="use_realtime_alignment">Use Realtime Alignment</string>
    <string name="use_realtime_alignment_description">Align the images while capturing them (Highly experimental).</string>
    <string name="enable_location_provider">Store location</string>
    <string name="enable_location_provider_description">Whether to determine and store the location in the panorama files.</string>
    <string name="editor_film_style">Style</string>
    <string name="editor_film_center_size">Center Size</string>
    <string name="editor_film_saturation">Saturation</string>
    <string name="editor_film_blur_strength">Blur Strength</string>
    <string name="editor_film_grain">Grain</string>
    <string name="editor_film_style_strength">Style Strength</string>
    <string name="editor_film_brightness">Brightness</string>
    <string name="editor_film_preset">Preset</string>
    <string name="editor_film_sub_preset">Sub Preset</string>
    <string name="editor_retrolux_style">Style</string>
    <string name="editor_retrolux_brightness">Brightness</string>
    <string name="editor_retrolux_saturation">Saturation</string>
    <string name="editor_retrolux_contrast">Contrast</string>
    <string name="editor_retrolux_style_strength">Style Strength</string>
    <string name="editor_retrolux_scratches">Scratches</string>
    <string name="editor_retrolux_light_leaks">Light Leaks</string>
    <string name="editor_retrolux_blur_strength">Blur Strength</string>
    <string name="editor_retrolux_vignette_strength">Vignette Strength</string>
    <string name="editor_retrolux_generic1">Generic 1</string>
    <string name="editor_retrolux_generic2">Generic 2</string>
    <string name="editor_retrolux_texture_option">Texture Option</string>
    <string name="editor_retrolux_preset">Preset</string>
    <string name="editor_retrolux_sub_preset">Sub Preset</string>
    <string name="editor_tiltandshift_style">Style</string>
    <string name="editor_tiltandshift_transition">Transition</string>
    <string name="editor_tiltandshift_blur_strength">Blur Strength</string>
    <string name="editor_tiltandshift_brightness">Brightness</string>
    <string name="editor_tiltandshift_saturation">Saturation</string>
    <string name="editor_tiltandshift_contrast">Contrast</string>
    <string name="editor_tiltandshift_x_radius">X Radius</string>
    <string name="editor_tiltandshift_y_radius">Y Radius</string>
    <string name="editor_tiltandshift_rotation_angle">Rotation Angle</string>
    <string name="editor_vintage_style">Style</string>
    <string name="editor_vintage_texture">Texture</string>
    <string name="editor_vintage_brightness">Brightness</string>
    <string name="editor_vintage_saturation">Saturation</string>
    <string name="editor_vintage_texture_strength">Texture Strength</string>
    <string name="editor_vintage_center_size">Center Size</string>
    <string name="editor_vintage_style_strength">Style Strength</string>
    <string name="editor_blackandwhite_style">Style</string>
    <string name="editor_blackandwhite_color_style">Color Filter</string>
    <string name="editor_blackandwhite_brightness">Brightness</string>
    <string name="editor_blackandwhite_contrast">Contrast</string>
    <string name="editor_blackandwhite_grain">Grain</string>
    <string name="editor_blackandwhite_filter_strength">Filter Strength</string>
    <string name="editor_blackandwhite_generic">Generic</string>
    <string name="editor_centerfocus_style">Style</string>
    <string name="editor_centerfocus_filter_strength">Filter Strength</string>
    <string name="editor_centerfocus_center_size">Center Size</string>
    <string name="editor_centerfocus_inner_brightness">Inner Brightness</string>
    <string name="editor_centerfocus_blur_strength">Blur Strength</string>
    <string name="editor_centerfocus_outer_brightness">Outer Brightness</string>
    <string name="editor_fixedframe_frame_selection">select frame</string>
    <string name="editor_fixedframe_hp_frame_00">Frame 1</string>
    <string name="editor_fixedframe_hp_frame_01">Frame 2</string>
    <string name="editor_fixedframe_hp_frame_02">Frame 3</string>
    <string name="editor_fixedframe_hp_frame_03">Frame 4</string>
    <string name="editor_fixedframe_hp_frame_04">Frame 5</string>
    <string name="editor_fixedframe_hp_frame_05">Frame 6</string>
    <string name="editor_fixedframe_hp_frame_06">Frame 7</string>
    <string name="editor_fixedframe_hp_frame_07">Frame 8</string>
    <string name="editor_fixedframe_hp_frame_08">Frame 9</string>
    <string name="editor_fixedframe_hp_frame_09">Frame 10</string>
    <string name="editor_fixedframe_hp_frame_10">Frame 11</string>
    <string name="editor_fixedframe_hp_frame_11">Frame 12</string>
    <string name="editor_fixedframe_hp_frame_12">Frame 13</string>
    <string name="editor_fixedframe_plain_frame_00">Frame 14</string>
    <string name="editor_fixedframe_plain_frame_01">Frame 15</string>
    <string name="editor_fixedframe_plain_frame_02">Frame 16</string>
    <string name="editor_fixedframe_frame_square">Format</string>
    <string name="editor_fixedframe_frame_offset">Offset</string>
    <string name="editor_fixedframe_frame_strength">Strength</string>
    <string name="editor_fixedframe_frame_colorized">Colorize</string>
    <string name="editor_fixedframe_frame_flipping">Flipping</string>
    <string name="filtershow_undo">Undo</string>
    <string name="filtershow_redo">Redo</string>
    <string name="show_imagestate_panel">Show Applied Effects</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
</resources>